alteracao prova LP

--- a/src/view/JDlgUsuarios.form
+++ b/src/view/JDlgUsuarios.form
@@ -57,13 +57,13 @@
                                   <Component id="JFmtCpf" min="-2" pref="130" max="-2" attributes="0"/>
                                   <EmptySpace min="-2" pref="53" max="-2" attributes="0"/>
                                   <Group type="103" groupAlignment="0" attributes="0">
-                                      <Component id="jLabel8" alignment="0" min="-2" max="-2" attributes="0"/>
                                       <Group type="103" alignment="0" groupAlignment="1" attributes="0">
                                           <Component id="jchbAtivo" alignment="1" min="-2" max="-2" attributes="0"/>
                                           <Component id="jFmtDataNascimento" alignment="1" min="-2" pref="257" max="-2" attributes="0"/>
                                       </Group>
                                       <Component id="jLabel6" alignment="0" min="-2" max="-2" attributes="0"/>
                                       <Component id="jCboNivel" alignment="0" min="-2" pref="184" max="-2" attributes="0"/>
+                                      <Component id="jLabel8" alignment="0" min="-2" max="-2" attributes="0"/>
                                   </Group>
                               </Group>
                               <Component id="jLabel5" alignment="0" min="-2" max="-2" attributes="0"/>
@@ -85,7 +85,7 @@
                   <EmptySpace min="-2" pref="10" max="-2" attributes="0"/>
                   <Component id="jLabel2" min="-2" max="-2" attributes="0"/>
                   <EmptySpace max="-2" attributes="0"/>
-                  <Component id="jTxtCodigo" min="-2" max="-2" attributes="0"/>
+                  <Component id="jTxtCodigo" min="-2" pref="20" max="-2" attributes="0"/>
                   <EmptySpace max="-2" attributes="0"/>
                   <Component id="jLabel3" min="-2" max="-2" attributes="0"/>
                   <EmptySpace min="-2" pref="1" max="-2" attributes="0"/>
@@ -146,11 +146,10 @@
     <Component class="javax.swing.JComboBox" name="jCboNivel">
       <Properties>
         <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
-          <StringArray count="4">
+          <StringArray count="3">
             <StringItem index="0" value="1"/>
             <StringItem index="1" value="2"/>
-            <StringItem index="2" value="3"/>
-            <StringItem index="3" value="4"/>
+            <StringItem index="2" value=""/>
           </StringArray>
         </Property>
       </Properties>
@@ -184,7 +183,7 @@
     </Component>
     <Component class="javax.swing.JLabel" name="jLabel2">
       <Properties>
-        <Property name="text" type="java.lang.String" value="c&#xf3;digo"/>
+        <Property name="text" type="java.lang.String" value="id de usuario"/>
       </Properties>
     </Component>
     <Component class="javax.swing.JButton" name="jBtnExcluir">
@@ -200,7 +199,7 @@
     </Component>
     <Component class="javax.swing.JLabel" name="jLabel8">
       <Properties>
-        <Property name="text" type="java.lang.String" value="N&#xed;vel"/>
+        <Property name="text" type="java.lang.String" value="nivel de permiso"/>
       </Properties>
     </Component>
     <Component class="javax.swing.JFormattedTextField" name="jFmtDataNascimento">
