--- a/src/view/JDlgProdutoNovo.form
+++ b/src/view/JDlgProdutoNovo.form
@@ -38,7 +38,7 @@
               <Component id="jScrollPane1" min="-2" pref="269" max="-2" attributes="0"/>
               <EmptySpace type="unrelated" max="-2" attributes="0"/>
               <Component id="jSlider1" min="-2" max="-2" attributes="0"/>
-              <EmptySpace pref="100" max="32767" attributes="0"/>
+              <EmptySpace pref="90" max="32767" attributes="0"/>
               <Component id="jPanel1" min="-2" max="-2" attributes="0"/>
           </Group>
       </Group>
@@ -81,6 +81,9 @@
       <SubComponents>
         <Component class="javax.swing.JButton" name="jBtnIncluir">
           <Properties>
+            <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
+              <Image iconType="3" name="/img/incluir.png"/>
+            </Property>
             <Property name="text" type="java.lang.String" value="Incluir"/>
           </Properties>
           <Events>
@@ -89,6 +92,9 @@
         </Component>
         <Component class="javax.swing.JButton" name="jBtnAlterar">
           <Properties>
+            <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
+              <Image iconType="3" name="/img/alterar.png"/>
+            </Property>
             <Property name="text" type="java.lang.String" value="Alterar"/>
           </Properties>
           <Events>
@@ -97,6 +103,9 @@
         </Component>
         <Component class="javax.swing.JButton" name="jBtnExcluir">
           <Properties>
+            <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
+              <Image iconType="3" name="/img/Excluir.png"/>
+            </Property>
             <Property name="text" type="java.lang.String" value="Excluir"/>
           </Properties>
           <Events>
