--- a/src/view/JDlgProdutoNovoIA.form
+++ b/src/view/JDlgProdutoNovoIA.form
@@ -182,6 +182,9 @@
     <Component class="javax.swing.JTextField" name="jTxtTipo">
     </Component>
     <Component class="javax.swing.JFormattedTextField" name="jFmtValidade">
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jFmtValidadeActionPerformed"/>
+      </Events>
     </Component>
   </SubComponents>
 </Form>
