commit de trabalho do 2 bim, por algum motivo nao tenho a tela de compras mas amanha vou fazer a adição dela.

--- a/src/query/JDlgConsultasUsuarios.form
+++ b/src/query/JDlgConsultasUsuarios.form
@@ -74,6 +74,9 @@
     </Component>
     <Component class="javax.swing.JButton" name="jBtnConsultar">
       <Properties>
+        <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
+          <Image iconType="3" name="/img/pesquisar.png"/>
+        </Property>
         <Property name="text" type="java.lang.String" value="Consultar"/>
       </Properties>
       <Events>
